# Activity_Tracker_LP

./: .gitignore  CMakeLists.txt  config.h  main.cpp
controller/: DayActivitiesController.cpp  DayActivitiesController.h
exception/: ActivityNotFoundException.cpp  ActivityNotFoundException.h  EmptyActivityNameException.cpp  EmptyActivityNameException.h  EmptyPlaceNameException.cpp  EmptyPlaceNameException.h  EmptyTagNameException.cpp  EmptyTagNameException.h  IntervalAlreadyOccupied.cpp  IntervalAlreadyOccupied.h  IntervalAlreadyOccupiedException.cpp  IntervalAlreadyOccupiedException.h  WrongIntervalException.cpp  WrongIntervalException.h
model/: Activity.cpp  Activity.h  ActivityVote.h  DayActivities.cpp  DayActivities.h  Observer.h  Place.cpp  Place.h  SportActivity.cpp  SportActivity.h  SportActivityType.h  Subject.h  Tag.cpp  Tag.h
test/: ActivityTest.cpp  ActivityTestFixture.cpp  CMakeLists.txt  DayActivityTest.cpp  PlaceTest.cpp  TagTest.cpp  runAllTests.cpp
view/: ActivityItemWidgetDelegate.cpp  ActivityItemWidgetDelegate.h  AddUpdateActivitiesView.cpp  AddUpdateActivitiesView.h  DayActivitiesList.cpp  DayActivitiesList.h  DayActivitiesView.cpp  DayActivitiesView.h  DayActivityRow.cpp  DayActivityRow.h  ErrorMessageBox.h  ListActivitiesTemplate.cpp  ListActivitiesTemplate.h  MainWindowView.cpp  MainWindowView.h  MessageBox.h  SuccessMessagebox.h
